Fix layout issues with no flex at mobile breakpoints

--- a/static/src/stylesheets/module/facia/_item.scss
+++ b/static/src/stylesheets/module/facia/_item.scss
@@ -74,7 +74,9 @@ $fc-item-gutter: $gs-gutter / 4;
     width: 100%;
 
     @include mq(tablet) {
-        @include flex(1);
+        .has-flex & {
+            @include flex(1);
+        }
 
         .has-flex-wrap & {
             @include flex-display;
@@ -92,7 +94,7 @@ $fc-item-gutter: $gs-gutter / 4;
     @include box-sizing(border-box);
 
     @include mq(tablet) {
-        .has-flex-wrap {
+        .has-flex-wrap & {
             @include flex-direction(column);
             @include flex-display;
             @include flex(1);
@@ -122,8 +124,18 @@ $fc-item-gutter: $gs-gutter / 4;
 
 .fc-item,
 .item {
-    margin-left: $gs-gutter * .5;
-    margin-right: $gs-gutter * .5;
+    @include mq($until: tablet) {
+        padding-left: $gs-gutter * .5;
+        padding-right: $gs-gutter * .5;
+        @include box-sizing(border-box);
+    }
+
+    @include mq(tablet) {
+        padding-left: 0;
+        padding-right: 0;
+        margin-left: $gs-gutter * .5;
+        margin-right: $gs-gutter * .5;
+    }
 
     a {
         color: colour(neutral-1);
