--- a/static/src/stylesheets/module/facia/_items.scss
+++ b/static/src/stylesheets/module/facia/_items.scss
@@ -21,6 +21,7 @@
 // overrides of current slices
 
 .fc-slice__item {
+    width: 100%;
     position: relative;
     padding-bottom: 0;
     margin-bottom: $gs-baseline;
